tests/build/enum_into.stderr
error: Deriving enums is not supported
 --> $DIR/enum_into.rs:4:5
  |
4 | pub enum Nothing {
  |     ^^^^
