tests/build/enum_into.rs
use dict_derive::IntoPyObject;

#[derive(IntoPyObject)]
pub enum Nothing {
    None,
}

fn main() {}
